// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component Matches snapshot when fluid is false 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  max-width: container;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
  margin: 0 auto;
  padding-left: 8px;
  padding-right: 8px;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    max-width: 540px;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    max-width: 720px;
  }
}

@media screen and (min-width:64em) {
  .emotion-0 {
    max-width: 960px;
  }
}

<Container
  fluid={false}
>
  <ForwardRef
    as="div"
    sx={
      Object {
        "m": "0 auto",
        "maxWidth": Array [
          "100%",
          "540px",
          "720px",
          "960px",
          "1140px",
          "1320px",
        ],
        "px": 2,
      }
    }
  >
    <Styled(div)
      __css={
        Object {
          "maxWidth": "container",
          "mx": "auto",
          "width": "100%",
        }
      }
      __themeKey="layout"
      as="div"
      sx={
        Object {
          "m": "0 auto",
          "maxWidth": Array [
            "100%",
            "540px",
            "720px",
            "960px",
            "1140px",
            "1320px",
          ],
          "px": 2,
        }
      }
      variant="container"
    >
      <div
        className="emotion-0"
      >
        Fluid Container
      </div>
    </Styled(div)>
  </ForwardRef>
</Container>
`;

exports[`Container component Matches snapshot when fluid is true 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  max-width: container;
  margin-left: auto;
  margin-right: auto;
  margin: 0 auto;
  padding-left: 8px;
  padding-right: 8px;
}

<Container
  fluid={true}
>
  <ForwardRef
    as="div"
    sx={
      Object {
        "m": "0 auto",
        "maxWidth": undefined,
        "px": 2,
      }
    }
  >
    <Styled(div)
      __css={
        Object {
          "maxWidth": "container",
          "mx": "auto",
          "width": "100%",
        }
      }
      __themeKey="layout"
      as="div"
      sx={
        Object {
          "m": "0 auto",
          "maxWidth": undefined,
          "px": 2,
        }
      }
      variant="container"
    >
      <div
        className="emotion-0"
      >
        Not Fluid Container
      </div>
    </Styled(div)>
  </ForwardRef>
</Container>
`;
